--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
