--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -5,14 +5,81 @@
 * {
   font-family: "Poiret One", cursive;
 }
-.fondo {
-  background-image: url("https://www.matteozanga.it/wp-content/uploads/2020/04/Matteo-Zanga-Fotografo.jpg.webp");
-}
-.title-1 {
-  background: aqua;
-  width: 60%;
-  font-size: 40px;
+
+.principal-title {
+  font-size: 60px;
+  font-weight: 300px;
+  color: white;
   font-family: "Poiret One", sans-serif;
+}
+.fondo {
+  background-image: url(https://www.matteozanga.it/wp-content/uploads/2020/04/Matteo-Zanga-Fotografo.jpg.webp);
+}
+/*Imgenes de fondo de la galaria de imagenes */
+.img-photo {
+  background-image: url(https://www.matteozanga.it/wp-content/uploads/2020/04/fotografie-commerciali.jpg.webp);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.dos {
+  background-image: url(https://www.matteozanga.it/wp-content/uploads/2020/04/fotografo-moda.jpg.webp);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.tres {
+  background-image: url(https://www.matteozanga.it/wp-content/uploads/2020/04/fotografo-food.jpg.webp);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cuatro {
+  background-image: url(https://www.matteozanga.it/wp-content/uploads/2020/04/fotografie-spedizioni.jpg.webp);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.title-photo {
+  display: flex;
+  justify-content: center;
+  font-size: 70px;
+  font-weight: 300px;
+  color: white;
+}
+
+.title-1 {
+  width: 35%;
+  font-size: 40px;
+  padding: 5px auto;
+  font-family: "Poiret One", cursive;
+  color: #7a7a7a;
+  margin-left: 50%;
+  margin-bottom: 10px;
+}
+
+.title-2 {
+  background-color: black;
+  font-size: Roboto, sans-serif;
+  text-align: end;
+  width: 60%;
+  line-height: 22px;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-left: 25%;
+  color: #7a7a7a;
+}
+
+.line {
+  width: 35%;
+  border: solid 1.5px blue;
+  margin-left: 50%;
+}
+
+.button-text {
+  margin-left: 72.5%;
+  margin-top: 10%;
 }
 /* 
     General Styles used on every website (Don't Repeat Yourself)
