--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -99,6 +99,46 @@
   color: rgb(0, 153, 255);
 }
 
-.titlecomponent{
+.titlecomponent {
   background-color: #4f6597;
+}
+/*Estilos para el Componente FotoGallery*/
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 100%;
+}
+
+.row {
+  display: flex;
+  padding: 10px 10px 10px 10px;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 25%;
+  padding: 5px;
+}
+
+.icon {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 600px) {
+  .column {
+    flex: 100%;
+  }
+}
+@media (max-width: 800px) {
+  .column {
+    flex: 50%;
+  }
 }
